first setup, playing with illumination

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <title>SPJAM2014</title>
     <meta charset="utf-8" />
+    <style type="text/css">
+      * { margin:0; padding:0; }
+
+      /* centralize */
+      canvas { position: absolute; margin: auto; top: 0; right: 0; bottom: 0; left: 0; }
+    </style>
 </head>
 <body>
   <script type="text/javascript" src="src/vendor/pixi.dev.js"></script>
-  <script type="text/javascript" src="src/main.js"></script>
+  <script type="text/javascript" src="build.js"></script>
 </body>
 </html>
