--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-  <script type="text/javascript" src="src/vendor/tweenjs.js"></script>
+  <!-- <script type="text/javascript" src="src/vendor/tweenjs.js"></script> -->
   <script type="text/javascript" src="src/vendor/pixi.dev.js"></script>
   <script type="text/javascript" src="build.js"></script>
 </body>
