--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+  <canvas id="canvas"></canvas>
   <script type="text/javascript" src="src/vendor/pixi.dev.js"></script>
   <script type="text/javascript" src="build.js"></script>
 </body>
