--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <canvas id="canvas"></canvas>
+  <script type="text/javascript" src="src/vendor/howler.min.js"></script>
   <script type="text/javascript" src="src/vendor/pixi.dev.js"></script>
   <script type="text/javascript" src="build.js"></script>
 </body>
