--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>SPJAM2014</title>
     <meta charset="utf-8" />
     <style type="text/css">
-      * { margin:0; padding:0; }
+      * { margin:0; padding:0; background-color: #000  }
 
       /* centralize */
       canvas { position: absolute; margin: auto; top: 0; right: 0; bottom: 0; left: 0; }
